# bilili_rs

./: CLAUDE.md  Cargo.toml
.claude/skills/bilili-skill/: SKILL.md
bili_bin/: Cargo.toml
bili_bin/src/: barrage.rs  client.rs  gift.rs  like.rs  login.rs  main.rs  refresh.rs  room.rs  share.rs  user.rs
src/: lib.rs
src/api/: mod.rs  wbi.rs
src/live_ws/: message.rs  mod.rs
