[package]
name = "bilili_rs"
version = "0.2.4"
authors = ["tcdk <458761603@qq.com>"]
edition = "2021"
license = "MIT"
description = "A bilibili sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["bili_bin"]


[dependencies]
log = "0.4"
reqwest = { version = "0.12.4", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = [
    "async-await",
    "sink",
    "std",
] }
url = "2"

#ecode
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
inflate = "0.4"
gzip = "0.1.2"
byteorder = "1"

thiserror = "2.0.3"
md5 = "0.7.0"
cached = { version = "0.55", features = ["async"] }
