[package]
name = "bili_bin"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"

clap = { version = "4", features = ["derive", "env"] }

bilili_rs = { path = "..", version = "0.2.3" }
qrcode = { version = "0.14", features = ["svg"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
